fix(test): keep outbox tests Java 17 compatible